force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/Track_Solicitud_Kit_de_Inicio__c.object-meta.xml
<CustomObject>
    <description>Objeto que trackea los pasos que avanza el usuario en la solicitud de kit de inicio de Nutricia Siemore Juntos</description>
    <label>Track Solicitud Kit de Inicio</label>
    <nameField>
        <label>Nombre de Track</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Track Solicitudes Kit de Inicio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>