force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Cupon__c.field-meta.xml
<CustomField>
    <fullName>Cupon__c</fullName>
    <label>Cupon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>