force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Datos_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Datos_Paciente__c</fullName>
    <description>Datos del paciente que está completando los formularios de solicitud de kit de inicio</description>
    <label>Datos Paciente</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>