force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Ingreso_datos_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_datos_de_contacto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El usuario completó el formulario de Datos de Contacto</description>
    <label>2 - Ingresó datos de contacto</label>
    <type>Checkbox</type>
</CustomField>