force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Ingreso_datos_de_direccion__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_datos_de_direccion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El usuario completó el formulario de Datos de Dirección</description>
    <label>3 - Ingresó datos de dirección</label>
    <type>Checkbox</type>
</CustomField>