force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Ingreso_datos_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_datos_de_paciente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El usuario completó el formulario de Datos del Paciente</description>
    <label>1 - Ingresó datos de paciente</label>
    <type>Checkbox</type>
</CustomField>