force-app/main/default/objects/Track_Solicitud_Kit_de_Inicio__c/fields/Solicito_Kit_de_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Solicito_Kit_de_Inicio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El usuario completó el formulario de Datos del Tratamiento y envió todos los datos para la solicitud de kit de inicio</description>
    <label>4 - Solicitó Kit de Inicio</label>
    <type>Checkbox</type>
</CustomField>